# multipurpose-media-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  readme.md  v0.0.2-b changelog.md  v0.0.2-c Changelog.md  v0.0.2-c changelog.md  v0.0.2-d Changelog.md  v0.0.2-e Changelog.md
.github/workflows/: docker-publish.yml
src/: main.rs  svg_manipulator.rs  webp_utility.rs
