[package]
name = "multipurpose-media-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
actix-web = "4"
actix-files = "0.6"
image = "0.25.1"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
resvg = "0.41.0"
webp = "0.3.0"
